# tablet-qt

./: .bumpversion.cfg  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
documentation/: tablet_subsystem_class_diagram.mls  tablet_subsystem_class_model.xcm
documentation/models/: presentation_subsystem.xcm  presentation_subsystem_cd.mls  render_subsystem.xcm  render_subsystem_cd.mls
src/tabletlib/: __main__.py  etchasketch.py  geometry_types.py  layer.py  log.conf  presentation.py  scene_view.py  styledb.py  tablet.py  view.py
src/tabletlib/config/: color_usages.yaml  colors.yaml  dash_patterns.yaml  drawing_types.yaml  typefaces.yaml
src/tabletlib/graphics/: circle_se.py  crayon_box.py  diagnostic_marker.py  image.py  line_segment.py  polygonSE.py  rectangle_se.py  text_element.py
src/tabletqt/: __main__.py  element.py  etch2.py  etchasketch.py  exceptions.py  layer.py  paths.py  presentation.py  resource_library.py  scene_view.py  sketchsymbols.py  styledb.py  symbol.py  tablet.py  tablet_config.py
src/tabletqt/config/: colors.yaml  drawing_types.yaml  text_styles.yaml
src/tabletqt/configuration/: colors.yaml  drawing_types.yaml  images.yaml  line_styles.yaml  stickers.yaml  styles.py  symbols.yaml  tablet_config.py  text_styles.yaml  typefaces.yaml
src/tabletqt/demo/: demo1.py  demo2_stickers.py  demo3_shapes.py  demo3b_shapes.py  demo4_lines.py  demo5_symbols.py  demo5sm_symbols.py  demo6_bp_rects.py  (+4 more)
tests/: test_cd_text.py  test_images.py  test_rectangles.py  test_starrcd_symbols.py  test_state_symbols.py  test_xuml_stickers.py
(+13 files in other folders)
